# rust_simple_test

./: .gitignore  Cargo.toml  debug.cmd  vcpkg.json
.github/workflows/: build.yml  test-macos-vcpkg.yml
examples/: idd_control.rs  oidc_claims.rs  win_cmdline.rs  wss.rs
src/: main.rs
