[package]
name = "simple_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
log = "0.4.21"
env_logger = "0.11"
nokhwa = { path="../nokhwa", features = ["input-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "winuser",
    "winver",
    "winspool",
    "wincrypt",
    "errhandlingapi",
    "setupapi",
    "devguid",
    "cguid",
    "cfgmgr32",
    "handleapi",
    "ioapiset",
    "wow64apiset",
] }

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "macos")'.dev-dependencies]
cpal = "0.15.3"
sysinfo = "0.34.2"
# sysinfo = { git = "https://github.com/fufesou/sysinfo", branch = "test/win_cmdline" }

[target.'cfg(target_os = "windows")'.dev-dependencies]
winreg = "0.11"
sysinfo = "0.29.10"

[dev-dependencies]
rdev = { git = "https://github.com/rustdesk-org/rdev" }
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"] }
# reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
structopt = { version = "0.3.26", features = ["wrap_help"] }
lettre = { version = "0.10.4", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
] }
openidconnect = { git = "https://github.com/fufesou/openidconnect-rs", branch = "refact/ignore_timestamp_error_for_auth0", features = [
    "reqwest",
    "rustls-tls",
], default-features = false }
hex = "0.4"
backtrace = "0.3.69"
sqlx = { git = "https://github.com/rustdesk-org/sqlx", features = [
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "json",
    "uuid",
    "postgres",
] }
chrono = "0.4.31"
serde_derive = "1.0.193"
async-trait = "0.1.74"
serde = "1.0.193"
async-stripe = { version = "0.31", features = ["runtime-tokio-hyper-rustls"] }
uuid = { version = "1.3", features = ["v7", "serde", "v4"] }
serde_json = "1.0.108"
serde_repr = "0.1.18"
ldap3 = { version = "0.11", default-features = false, features = [
    "tls-native",
    "sync",
] }
lazy_static = "1.4.0"
wol-rs = "1.0"
default-net = "0.14"

[profile.release]
debug = true
