[package]
name = "simple_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
nokhwa = { git = "https://github.com/rustdesk-org/nokhwa.git", branch = "fix_from_raw_parts", features = ["input-native"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "winuser",
    "winver",
    "winspool",
    "wincrypt",
    "errhandlingapi",
    "setupapi",
    "devguid",
    "cguid",
    "cfgmgr32",
    "handleapi",
    "ioapiset",
    "wow64apiset",
] }

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "macos")'.dev-dependencies]
cpal = "0.15.3"
sysinfo = "0.34.2"
# sysinfo = { git = "https://github.com/fufesou/sysinfo", branch = "test/win_cmdline" }

[target.'cfg(target_os = "windows")'.dev-dependencies]
winreg = "0.11"
sysinfo = "0.29.10"

[dev-dependencies]
rdev = { git = "https://github.com/rustdesk-org/rdev" }
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"] }
# reqwest = { version = "0.11.20", features = ["json"] }
structopt = { version = "0.3.26", features = ["wrap_help"] }
lettre = { version = "0.10.4", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
] }
base64ct = "1.6"
openidconnect = { git = "https://github.com/fufesou/openidconnect-rs", branch = "refact/ignore_timestamp_error_for_auth0", features = [
    "reqwest",
    "rustls-tls",
], default-features = false }
hex = "0.4"
backtrace = "0.3.69"
sqlx = { git = "https://github.com/rustdesk-org/sqlx", features = [
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "json",
    "uuid",
    "postgres",
] }
chrono = "0.4.31"
serde_derive = "1.0.193"
async-trait = "0.1.74"
serde = "1.0.193"
async-stripe = { version = "0.31", features = ["runtime-tokio-hyper-rustls"] }
uuid = { version = "1.3", features = ["v7", "serde", "v4"] }
serde_json = "1.0.108"
serde_repr = "0.1.18"
ldap3 = { version = "0.11", default-features = false, features = [
    "tls-native",
    "sync",
] }
lazy_static = "1.4.0"
wol-rs = "1.0"
default-net = "0.14"
clap = "4.5"

futures = "0.3"
bytes = { version = "1.10", features = ["serde"] }
tokio-native-tls = "0.3"
tokio-rustls = { version = "0.26", features = [
    "logging",
    "tls12",
    "ring",
], default-features = false }
tokio-tungstenite = { git = "https://github.com/fufesou/tokio-tungstenite", branch = "test/accept_danger", features = ["rustls-tls-native-roots", "rustls-tls-webpki-roots", "native-tls"] }
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots", "rustls-tls-webpki-roots", "native-tls"] }
rustls-pki-types = { version = "1.0" }
rustls-native-certs = "0.8"
webpki-roots = "0.26"


[profile.release]
debug = true
